--- a/Space Shooter/Assembly-CSharp.csproj
+++ b/Space Shooter/Assembly-CSharp.csproj
@@ -47,8 +47,10 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\DestroyByBoundary.cs" />
+     <Compile Include="Assets\Scripts\DestroyByContact.cs" />
      <Compile Include="Assets\Scripts\Mover.cs" />
      <Compile Include="Assets\Scripts\PlayerController.cs" />
+     <Compile Include="Assets\Scripts\RandomRotator.cs" />
      <Compile Include="Assets\TutorialInfo\Scripts\Readme.cs" />
      <Compile Include="Assets\_Complete-Game\Scripts\Done_BGScroller.cs" />
      <Compile Include="Assets\_Complete-Game\Scripts\Done_DestroyByBoundary.cs" />
